# preeti-unicode-converter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  workflow.yml
src/preeti_unicode/: __init__.py  cli.py  converter.py  file_converter.py  readers.py  test_utils.py  writers.py
src/preeti_unicode/core/: __init__.py  base_classes.py  config.py  exceptions.py  factories.py  interfaces.py
src/preeti_unicode/enhanced/: __init__.py  cache.py  logging_system.py  parallel_processor.py  pdf_processor.py  pipeline.py  plugins.py
src/preeti_unicode/fonts/: __init__.py  custom_fonts.py  font_manager.py  font_registry.py  preeti_variants.py
tests/: __init__.py  test_converter.py
